--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -97,8 +97,8 @@
 			<div class="sticky column col2">
 				<h3>Image preview</h3>
 				<div class="preview odd">
-					<img id="wait_image" src="{{ url_for('static', filename='images/icon-wait-64.gif') }}">
-					<img id="preview_image" src="{{ url_for('static', filename='images/spacer.png') }}">
+					<img class="hidden" id="wait_image" src="{{ url_for('static', filename='images/icon-wait-64.gif') }}">
+					<img class="hidden" id="preview_image" src="{{ url_for('static', filename='images/spacer.png') }}">
 				</div>
 				<h3>Image actions</h3>
 				<div class="actions">
