--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -23,9 +23,11 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/playground.css') }}" type="text/css" />
 	
 	{% if settings.DEBUG %}
+	<script src="{{ url_for('static', filename='js/lib/lassocrop.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/common_view.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/playground.js') }}" type="text/javascript"></script>
 	{% else %}
+	<script src="{{ url_for('static', filename='js/lib/lassocrop.min.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/common_view.min.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/playground.min.js') }}" type="text/javascript"></script>
 	{% endif %}
@@ -64,7 +66,7 @@
 					<div>
 						<label>Start again</label>
 						<fieldset class="inline_form">
-							<button type="button" onclick="Playground.reset()">Reset</button>
+							<button type="button" onclick="Playground.reset()">Reset all</button>
 						</fieldset>
 					</div>
 					<br>
@@ -91,6 +93,15 @@
 							TODO some more
 						</fieldset>
 					</div>
+					<div>
+						<label>Cropping</label>
+						<fieldset class="inline_form">
+							<div class="crop_container">
+								<img id="crop_image" src="{{ url_for('static', filename='images/spacer.png') }}">
+								<button type="button" onclick="Playground.resetCrop(true)">Reset crop</button>
+							</div>
+						</fieldset>
+					</div>
 				</div>
 			</div>
 
@@ -103,9 +114,10 @@
 				<h3>Image actions</h3>
 				<div class="actions">
 					<fieldset class="inline_form">
-						TODO View actual size<br>
+						TODO View full screen / zoom<br>
+						TODO View actual size (new window)<br>
+						TODO View as PDF (new window)<br>
 						TODO Download image<br>
-						TODO View as PDF<br>
 					</fieldset>
 				</div>
 			</div>
