Playground dev - add file size, file format options

--- a/src/imageserver/static/styles/playground.css
+++ b/src/imageserver/static/styles/playground.css
@@ -102,6 +102,7 @@ h2 {
 .controls fieldset label {
 	margin: 0;
 	font-size: 90%;
+	width: auto;
 }
 .controls fieldset input {
 	vertical-align: top;
