--- a/src/imageserver/templates/base.html
+++ b/src/imageserver/templates/base.html
@@ -25,8 +25,11 @@
 						<li><a href="{{ url_for('canvas_view_help') }}">JavaScript - HTML5 viewer</a> (<a href="{{ url_for('canvas_view_index') }}">demo</a>)</li>
 						<li><a href="{{ url_for('gallery_view_help') }}">JavaScript - gallery viewer</a> (<a href="{{ url_for('gallery_view_index') }}">demo</a>)</li>
 						<li><a href="{{ url_for('slideshow_view_help') }}">JavaScript - image slideshow</a> (<a href="{{ url_for('slideshow_view_index') }}">demo</a>)</li>
-						<!-- Administration -->
-						<!-- Permissions -->
+						<!-- Playground -->
+						{% if config.DEMO_IMAGE_PATH %}
+						<li class="spacer">&nbsp;</li>
+						<li><a href="{{ url_for('playground') }}">Image playground</a></li>
+						{% endif %}
 					</ul>
 				</div>
 			</div>
