MDN says we should use button type=button

--- a/src/imageserver/admin/templates/admin_group_edit.html
+++ b/src/imageserver/admin/templates/admin_group_edit.html
@@ -154,7 +154,7 @@
 					{% endfor %}
 					</div>
 					<br/>
-					<button id="remove_all">Remove all &gt;&gt;</button>
+					<button id="remove_all" type="button">Remove all &gt;&gt;</button>
 				</div>
 				<div class="center members">
 					<div class="list">
@@ -172,7 +172,7 @@
 					{% endfor %}
 					</div>
 					<br/>
-					<button id="add_all">&lt;&lt; Add all</button>
+					<button id="add_all" type="button">&lt;&lt; Add all</button>
 				</div>
 			</div>
 			<div class="clear"></div>
