--- a/src/imageserver/templates/publish.html
+++ b/src/imageserver/templates/publish.html
@@ -115,7 +115,7 @@
 			<fieldset class="inline_form">
 				<div>
 					<label>Publish to file:</label>
-					<button id="publish_download" data-url="">Download final image</button>
+					<button id="publish_download" type="button" data-url="">Download final image</button>
 				</div>
 				<div>
 					<label>Publish to web:</label>
