--- a/src/imageserver/templates/publish/inc_common_fields.html
+++ b/src/imageserver/templates/publish/inc_common_fields.html
@@ -160,6 +160,7 @@
 				<div>
 					<label>Overlay image:</label>
 					<button id="overlay_src_browse"
+					        type="button"
 					        data-browse-url="{{ url_for('folder_browse', path=path, embed=1, show_files=1, msg='Select the overlay image file:') }}"
 					        >Browse...</button>
 					{{ help('option_overlay') }}<br>
