--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -80,7 +80,7 @@
 							<button type="button" onclick="Playground.play({width: 500, height: 500})">Medium square</button>
 							<button type="button" onclick="Playground.play({width: 1000, height: 1000})">Large square</button>
 							<button type="button" onclick="Playground.play({width: 200, height: 150})">Small landscape</button>
-							<button type="button" onclick="Playground.play({width: 500, height: 375})">Medium landscape</button>
+							<button type="button" onclick="Playground.play({width: 500, height: 375})">Medium l'scape</button>
 							<button type="button" onclick="Playground.play({width: 1000, height: 750})">Large landscape</button>
 							<button type="button" onclick="Playground.play({width: 150, height: 200})">Small portrait</button>
 							<button type="button" onclick="Playground.play({width: 375, height: 500})">Medium portrait</button>
@@ -168,10 +168,10 @@
 					<div>
 						<label>File format</label>
 						<fieldset class="inline_form">
-							<button type="button" onclick="Playground.play({format:'jpg', quality:20})">JPEG quality 20%</button>
-							<button type="button" onclick="Playground.play({format:'jpg', quality:50})">JPEG quality 50%</button>
-							<button type="button" onclick="Playground.play({format:'jpg', quality:70})">JPEG quality 70%</button>
-							<button type="button" onclick="Playground.play({format:'jpg', quality:90})">JPEG quality 90%</button>
+							<button type="button" onclick="Playground.play({format:'jpg', quality:20})">JPG quality 20%</button>
+							<button type="button" onclick="Playground.play({format:'jpg', quality:50})">JPG quality 50%</button>
+							<button type="button" onclick="Playground.play({format:'jpg', quality:70})">JPG quality 70%</button>
+							<button type="button" onclick="Playground.play({format:'jpg', quality:90})">JPG quality 90%</button>
 							<button type="button" onclick="Playground.play({format:'gif'})">GIF</button>
 							<button type="button" onclick="Playground.play({format:'bmp'})">BMP</button>
 							<button type="button" onclick="Playground.play({format:'png', quality:79})">PNG type 1</button>
