Add button margins

--- a/src/imageserver/reports/templates/reports_system_stats.html
+++ b/src/imageserver/reports/templates/reports_system_stats.html
@@ -67,7 +67,7 @@
 			</div>
 			<div>
 				<label></label>
-				<input type="submit" value="Refresh chart" class="topspace">
+				<input type="submit" value="Refresh chart">
 			</div>
 		</form>
 	</p>
