--- a/src/imageserver/reports/templates/reports_image_stats.html
+++ b/src/imageserver/reports/templates/reports_image_stats.html
@@ -72,7 +72,7 @@
 		</div>
 		<div>
 			<label></label>
-			<input type="submit" value="Refresh chart" class="topspace">
+			<input type="submit" value="Refresh chart">
 		</div>
 	</form>
 	<br/>
