--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -75,16 +75,16 @@
 					<div>
 						<label>Size</label>
 						<fieldset class="inline_form">
-							<button type="button" onclick="Playground.play({width: 0, height: 0})">Full size</button><br>
-							<button type="button" onclick="Playground.play({width: 200, height: 200})">Small square</button>
-							<button type="button" onclick="Playground.play({width: 500, height: 500})">Medium square</button>
-							<button type="button" onclick="Playground.play({width: 1000, height: 1000})">Large square</button>
-							<button type="button" onclick="Playground.play({width: 200, height: 150})">Small landscape</button>
-							<button type="button" onclick="Playground.play({width: 500, height: 375})">Medium l'scape</button>
-							<button type="button" onclick="Playground.play({width: 1000, height: 750})">Large landscape</button>
-							<button type="button" onclick="Playground.play({width: 150, height: 200})">Small portrait</button>
-							<button type="button" onclick="Playground.play({width: 375, height: 500})">Medium portrait</button>
-							<button type="button" onclick="Playground.play({width: 750, height: 1000})">Large portrait</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 0, height: 0})">Full size</button><br>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 200, height: 200})">Small square</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 500, height: 500})" class="default">Medium square</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 1000, height: 1000})">Large square</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 200, height: 150})">Small landscape</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 500, height: 375})">Medium l'scape</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 1000, height: 750})">Large landscape</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 150, height: 200})">Small portrait</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 375, height: 500})">Medium portrait</button>
+							<button type="button" sticky-group="size" onclick="Playground.play({width: 750, height: 1000})">Large portrait</button>
 						</fieldset>
 					</div>
 					<br>
@@ -105,14 +105,14 @@
 					<div>
 						<label>Borders</label>
 						<fieldset class="inline_form">
-							<button type="button" onclick="Playground.play({fill:'white'})">White</button>
-							<button type="button" onclick="Playground.play({fill:'black'})">Black</button>
-							<button type="button" onclick="Playground.play({fill:'gray'})">Mid Grey</button>
-							<button type="button" onclick="Playground.play({fill:'red'})">Red</button>
-							<button type="button" onclick="Playground.play({fill:'yellow'})">Yellow</button>
-							<button type="button" onclick="Playground.play({fill:'lightgray'})">Light Grey</button><br>
-							<button type="button" onclick="Playground.play({fill:'auto'})">Auto</button><br>
-							<button type="button" onclick="Playground.play({fill:'none'})">Transparent</button> <label>Requires PNG or GIF file format</label>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'white'})" class="default">White</button>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'black'})">Black</button>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'gray'})">Mid Grey</button>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'red'})">Red</button>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'yellow'})">Yellow</button>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'lightgray'})">Light Grey</button><br>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'auto'})">Auto</button><br>
+							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'none'})">Transparent</button> <label>Requires PNG or GIF file format</label>
 							<div>
 								<input id="autosizefit" type="checkbox" value="1" onchange="Playground.play({autosizefit: this.checked})">
 								<label for="autosizefit">Adjust image size to remove borders</label>
@@ -123,29 +123,29 @@
 					<div>
 						<label>Transforms</label>
 						<fieldset class="inline_form">
-							<button type="button" onclick="Playground.play({angle:0})">No rotation</button>
-							<button type="button" onclick="Playground.play({angle:-90})">Rotate 90&deg; left</button>
-							<button type="button" onclick="Playground.play({angle:90})">Rotate 90&deg; right</button>
-							<button type="button" onclick="Playground.play({angle:180})">Rotate 180&deg;</button>
-							<button type="button" onclick="Playground.play({angle:-45})">Rotate 45&deg; left</button>
-							<button type="button" onclick="Playground.play({angle:45})">Rotate 45&deg; right</button>
-							<button type="button" onclick="Playground.play({sharpen:0})">No sharpen/blur</button>
-							<button type="button" onclick="Playground.play({sharpen:100})">Sharpen</button>
-							<button type="button" onclick="Playground.play({sharpen:-300})">Blur</button>
-							<button type="button" onclick="Playground.play({flip:''})">No flip</button>
-							<button type="button" onclick="Playground.play({flip:'h'})">Flip horizontal</button>
-							<button type="button" onclick="Playground.play({flip:'v'})">Flip vertical</button>
+							<button type="button" sticky-group="angle" onclick="Playground.play({angle:0})" class="default">No rotation</button>
+							<button type="button" sticky-group="angle" onclick="Playground.play({angle:-90})">Rotate 90&deg; left</button>
+							<button type="button" sticky-group="angle" onclick="Playground.play({angle:90})">Rotate 90&deg; right</button>
+							<button type="button" sticky-group="angle" onclick="Playground.play({angle:180})">Rotate 180&deg;</button>
+							<button type="button" sticky-group="angle" onclick="Playground.play({angle:-45})">Rotate 45&deg; left</button>
+							<button type="button" sticky-group="angle" onclick="Playground.play({angle:45})">Rotate 45&deg; right</button>
+							<button type="button" sticky-group="sharpen" onclick="Playground.play({sharpen:0})" class="default">No sharpen/blur</button>
+							<button type="button" sticky-group="sharpen"onclick="Playground.play({sharpen:100})">Sharpen</button>
+							<button type="button" sticky-group="sharpen"  onclick="Playground.play({sharpen:-300})">Blur</button>
+							<button type="button" sticky-group="flip" onclick="Playground.play({flip:''})" class="default">No flip</button>
+							<button type="button" sticky-group="flip" onclick="Playground.play({flip:'h'})">Flip horizontal</button>
+							<button type="button" sticky-group="flip" onclick="Playground.play({flip:'v'})">Flip vertical</button>
 						</fieldset>
 					</div>
 					<br>
 					<div>
 						<label>Colour</label>
 						<fieldset class="inline_form">
-							<button type="button" onclick="Playground.play({colorspace:'srgb', icc:'', strip: 0})">Standard RGB</button>
-							<button type="button" onclick="Playground.play({colorspace:'srgb', icc:'fx-sepia', intent:'perceptual', strip: 1})">Sepia effect</button>
-							<button type="button" onclick="Playground.play({colorspace:'srgb', icc:'fx-metallic', intent:'perceptual', strip: 1})">Metallic effect</button>
-							<button type="button" onclick="Playground.play({colorspace:'gray', icc:'', strip: 1})">Grey (simple)</button>
-							<button type="button" onclick="Playground.play({colorspace:'srgb', icc:'greyscale', intent:'perceptual', strip: 1})">Grey (profile)</button>
+							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'', strip: 0})" class="default">Standard RGB</button>
+							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'fx-sepia', intent:'perceptual', strip: 1})">Sepia effect</button>
+							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'fx-metallic', intent:'perceptual', strip: 1})">Metallic effect</button>
+							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'gray', icc:'', strip: 1})">Grey (simple)</button>
+							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'greyscale', intent:'perceptual', strip: 1})">Grey (profile)</button>
 						</fieldset>
 					</div>
 					<br>
@@ -153,12 +153,12 @@
 						<label>Overlay /<br>Watermark</label>
 						<fieldset class="inline_form">
 							{% if overlay_image %}
-							<button type="button" onclick="Playground.play({overlay:''})">No overlay</button>
-							<button type="button" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.3, ovpos:'c'})">Watermark small</button>
-							<button type="button" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.7, ovopacity:0.3, ovpos:'c'})">Watermark large</button>
-							<button type="button" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.3, ovopacity:1, ovpos:'nw'})">Corner logo 1</button>
-							<button type="button" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:1, ovpos:'se'})">Corner logo 2</button>
-							<button type="button" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.5, ovpos:'se'})">Corner logo 3</button>
+							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:''})" class="default">No overlay</button>
+							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.3, ovpos:'c'})">Watermark small</button>
+							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.7, ovopacity:0.3, ovpos:'c'})">Watermark large</button>
+							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.3, ovopacity:1, ovpos:'nw'})">Corner logo 1</button>
+							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:1, ovpos:'se'})">Corner logo 2</button>
+							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.5, ovpos:'se'})">Corner logo 3</button>
 							{% else %}
 							<label><i>Not currently available</i></label>
 							{% endif %}
@@ -168,14 +168,14 @@
 					<div>
 						<label>File format</label>
 						<fieldset class="inline_form">
-							<button type="button" onclick="Playground.play({format:'jpg', quality:20})">JPG quality 20%</button>
-							<button type="button" onclick="Playground.play({format:'jpg', quality:50})">JPG quality 50%</button>
-							<button type="button" onclick="Playground.play({format:'jpg', quality:70})">JPG quality 70%</button>
-							<button type="button" onclick="Playground.play({format:'jpg', quality:90})">JPG quality 90%</button>
-							<button type="button" onclick="Playground.play({format:'gif'})">GIF</button>
-							<button type="button" onclick="Playground.play({format:'bmp'})">BMP</button>
-							<button type="button" onclick="Playground.play({format:'png', quality:79})">PNG type 1</button>
-							<button type="button" onclick="Playground.play({format:'png', quality:31})">PNG type 2</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:70})">JPG quality 70%</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:80})" class="default">JPG quality 80%</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:90})">JPG quality 90%</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:20})">JPG quality 20%</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'gif'})">GIF</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'bmp'})">BMP</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'png', quality:79})">PNG type 1</button>
+							<button type="button" sticky-group="format" onclick="Playground.play({format:'png', quality:31})">PNG type 2</button>
 							<div>
 								<input id="strip" type="checkbox" value="1" onchange="Playground.play({strip: this.checked})">
 								<label for="strip">Strip metadata (e.g. EXIF data) and colour profiles</label>
