--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -143,7 +143,7 @@
 						<fieldset class="inline_form">
 							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'', strip: 0})" class="default">Standard RGB</button>
 							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'fx-sepia', intent:'perceptual', strip: 1})">Sepia effect</button>
-							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'fx-metallic', intent:'perceptual', strip: 1})">Metallic effect</button>
+							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'fx-sheen', intent:'perceptual', strip: 1})">Oil-sheen effect</button>
 							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'gray', icc:'', strip: 1})">Grey (simple)</button>
 							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'greyscale', intent:'perceptual', strip: 1})">Grey (profile)</button>
 						</fieldset>
