--- a/src/imageserver/static/styles/details.css
+++ b/src/imageserver/static/styles/details.css
@@ -23,7 +23,8 @@
 	Last Changed:  $Date$ $Rev$ by $Author$
 */
 
-.datatable {
+.datatable,
+.map {
 	width: 500px;
 	margin-right: 30px;
 }
@@ -33,6 +34,15 @@
 }
 .datatable .nowrap {
 	white-space: nowrap;
+}
+
+.map {
+	height: 400px;
+}
+
+.history {
+	max-height: 400px;
+	overflow-y: auto;
 }
 
 #image_action_menu_owner {
@@ -58,11 +68,6 @@
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
-}
-
-#map {
-	width: 500px;
-	height: 400px;
 }
 
 #editform input[type="text"],
