--- a/src/imageserver/static/styles/details.css
+++ b/src/imageserver/static/styles/details.css
@@ -23,6 +23,10 @@
 	Last Changed:  $Date$ $Rev$ by $Author$
 */
 
+.float {
+	margin-bottom: 1em;
+}
+
 .datatable,
 .map {
 	width: 500px;
@@ -42,7 +46,7 @@
 
 .history {
 	max-height: 400px;
-	overflow-y: auto;
+	overflow-y: scroll;
 }
 
 #image_action_menu_owner {
@@ -55,7 +59,6 @@
 	height: 500px;
 	line-height: 500px;
 	margin-top: 1em;
-	margin-bottom: 1em;
 	margin-right: 30px;
 }
 #viewport canvas {
