--- a/src/imageserver/static/styles/upload.css
+++ b/src/imageserver/static/styles/upload.css
@@ -25,7 +25,7 @@
 
 #dropzone,
 .inline_form {
-	width: 23rem;
+	width: 26rem;
 }
 
 .collapsible {
@@ -62,4 +62,8 @@
 label img {
 	margin-left: 2px;
 	vertical-align: text-top;
+}
+
+progress {
+	margin-left: 1em;
 }
